after review and proof reading

--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
@@ -314,6 +314,18 @@ DOI = {10.2312/egs.20181037}
 	note= {available at https://aka-san.halcy.de/distance\_fields\_prefinal.pdf, accessed Jul. 28th 2020}
 }
 
+@misc{mercury,
+title = {hg\_sdf, A glsl library for building signed distance functions},
+note = {available at http://mercury.sexy/hg\_sdf/, accessed Feb. 10th 2020}
+}
+
+@misc{SDFunity,
+title = {Distance Field Raymarcher for Unity},
+author={Adrian Biagioli},
+note = {available at https://github.com/Flafla2/Generic-Raymarch-Unity, accessed Feb. 10th 2020}
+}
+
+
 @article{aubury_binomial_1996,
 	title = {Binomial {Filters}},
 	volume = {12},
