--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb3.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb3.bib
@@ -2248,6 +2248,11 @@ www.mediaktion.tv},
 	file = {Shadertoy BETA:/home/patrik/Zotero/storage/GY6TRXYB/www.shadertoy.com.html:text/html}
 }
 
+@misc{mercury,
+title = {http://mercury.sexy/hg_sdf/},
+note = {available at http://mercury.sexy/hg_sdf/, accessed Feb. 10th 2020}
+}
+
 @misc{quilez_inigo_nodate-1,
 	title = {Inigo {Quilez} :: fractals, computer graphics, mathematics, shaders, demoscene and more},
 	url = {https://www.iquilezles.org/www/articles/juliasets3d/juliasets3d.htm},
