--- a/paper/DAFx20_Templates_LaTeX/img/shoeBox_sim.tex
+++ b/paper/DAFx20_Templates_LaTeX/img/shoeBox_sim.tex
@@ -3,7 +3,7 @@
 
 \begin{axis}[
 colorbar,
-colorbar style={ylabel={}},
+colorbar style={ylabel={dB}},
 colormap={mymap}{[1pt]
   rgb(0pt)=(0.0000,0.0000,0.5000);
   rgb(22pt)=(0.0000,0.0000,1.0000);
@@ -24,15 +24,16 @@ tick align=outside,
 tick pos=left,
 width=0.8\textwidth,
 x grid style={white!69.0196!black},
-xlabel={Time [seconds]},
-xmin=0.0231, xmax=0.0721,
+xlabel={Time [milliseconds]},
+% xmin=0.0231, xmax=0.0721,xtick={0.03,0.04},
+xmin=23.1, xmax=72.1,xtick={30,40,50,60,70},
 xtick style={color=black},
 y grid style={white!69.0196!black},
-ylabel={Frequency [Hz]},
-ymin=30.0000, ymax=5000.0000,
+ylabel={Frequency [kHz]},
+ymin=0.0300000, ymax=5.0000000,
 ytick style={color=black}
 ]
-\addplot graphics [includegraphics cmd=\pgfimage,xmin=0.0231, xmax=0.0721, ymin=0.0000, ymax=22050.0000] {img/shoeBox_sim-002.png};
+\addplot graphics [includegraphics cmd=\pgfimage,xmin=23.1, xmax=72.1, ymin=0.0000, ymax=22.0500000] {img/shoeBox_sim-002.png};
 \end{axis}
 
 \end{tikzpicture}
