--- a/paper/DAFx20_Templates_LaTeX/img/shoebox_orig.tex
+++ b/paper/DAFx20_Templates_LaTeX/img/shoebox_orig.tex
@@ -24,15 +24,15 @@ tick align=outside,
 tick pos=left,
 width=0.8\textwidth,
 x grid style={white!69.0196!black},
-xlabel={Time [seconds]},
-xmin=0.0231, xmax=0.0721,
+xlabel={Time [milliseconds]},
+xmin=23.1, xmax=72.1,xtick={30,40,50,60,70},
 xtick style={color=black},
 y grid style={white!69.0196!black},
-ylabel={Frequency [Hz]},
-ymin=30.0000, ymax=5000.0000,
+ylabel={Frequency [kHz]},
+ymin=0.0300000, ymax=5.0000000,
 ytick style={color=black}
 ]
-\addplot graphics [includegraphics cmd=\pgfimage,xmin=0.0231, xmax=0.0721, ymin=0.0000, ymax=22050.0000] {img/shoebox_orig-002.png};
+\addplot graphics [includegraphics cmd=\pgfimage,xmin=23.1, xmax=72.1, ymin=0.0000, ymax=22.0500000] {img/shoebox_orig-002.png};
 \end{axis}
 
 \end{tikzpicture}
