--- a/paper/DAFx20_Templates_LaTeX/img/simBrink.tex
+++ b/paper/DAFx20_Templates_LaTeX/img/simBrink.tex
@@ -3,7 +3,7 @@
 
 \begin{axis}[
 colorbar,
-colorbar style={ylabel={}},
+colorbar style={ylabel={dB}},
 colormap={mymap}{[1pt]
   rgb(0pt)=(0.0000,0.0000,0.5000);
   rgb(22pt)=(0.0000,0.0000,1.0000);
@@ -25,14 +25,14 @@ tick pos=left,
 width=0.8\textwidth,
 x grid style={white!69.0196!black},
 xlabel={Time [seconds]},
-xmin=0.0057, xmax=0.2254,
+xmin=0.0057, xmax=0.2254,xtick={0.1, 0.2},
 xtick style={color=black},
 y grid style={white!69.0196!black},
-ylabel={Frequency [Hz]},
-ymin=30.0000, ymax=15000.0000,
+ylabel={Frequency [kHz]},
+ymin=0.0300000, ymax=15.0000000,
 ytick style={color=black}
 ]
-\addplot graphics [includegraphics cmd=\pgfimage,xmin=0.0057, xmax=0.2254, ymin=0.0000, ymax=22050.0000] {img/simBrink-014.png};
+\addplot graphics [includegraphics cmd=\pgfimage,xmin=0.0057, xmax=0.2254, ymin=0.0000, ymax=22.0500000] {img/simBrink-014.png};
 \end{axis}
 
 \end{tikzpicture}
