--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
@@ -252,7 +252,6 @@ title = {Physically Based Real-Time Auralization of Interactive Virtual Environm
     school       = "Technical University of Denmark, {DTU} Informatics, {E-}mail: reception@imm.dtu.dk",
     address      = "Asmussens Alle, Building 305, {DK-}2800 Kgs. Lyngby, Denmark",
     type         = "",
-    note         = "Supervised by Associate Professor Jeppe Revall Frisvad, jrf@imm.dtu.dk, and Associate Professor Jakob Andreas B{\ae}rentzen, jab@imm.dtu.dk, {DTU} Informatics",
     url          = "http://www.imm.dtu.dk/English.aspx",
     abstract     = "Computer Graphics since its existence has been striving to visualize its representations of surfaces and objects to accurately match their real life counterparts. We investigate the correctness of the ambient occlusion effect produced with the use of a distance to the closest surface metric. This value is obtained from a signed distance function/field. We evaluate the robustness of the method as well as its ease of use. We also test how this applies to a polygon mesh converted into a {3D} texture of distance values and included into our scenes. For rendering images we use our {GPU} implementation of ray marching in the form of sphere tracing and we compare the results to the ones produced by a ray tracing framework."
 }
@@ -270,9 +269,10 @@ DOI = {10.2312/egs.20181037}
 }
 
 @misc{quilez_inigo_nodate,
-	title = {Inigo {Quilez} :: fractals, computer graphics, mathematics, shaders, demoscene and more},
+	title = {Soft Shadows in raymarched SDFs},
 	url = {https://www.iquilezles.org/www/articles/rmshadows/rmshadows.htm},
 	urldate = {2020-02-17},
+	year={2010},
 	author = {Quilez, Inigo},
 	file = {Inigo Quilez \:\: fractals, computer graphics, mathematics, shaders, demoscene and more:/home/patrik/Zotero/storage/7GX8LC26/rmshadows.html:text/html},
 	note={available at https://www.iquilezles.org/www/articles/
@@ -289,9 +289,10 @@ DOI = {10.2312/egs.20181037}
 }
 
 @misc{quilez_inigo_nodate-1,
-	title = {Inigo {Quilez} :: fractals, computer graphics, mathematics, shaders, demoscene and more},
+	title = {3D Julia sets},
 	url = {https://www.iquilezles.org/www/articles/juliasets3d/juliasets3d.htm},
 	urldate = {2020-02-18},
+	year={2001},
 	author = {Quilez, Inigo},
 	file = {Inigo Quilez \:\: fractals, computer graphics, mathematics, shaders, demoscene and more:/home/patrik/Zotero/storage/NMX23SIU/juliasets3d.html:text/html},
 	note={available at https://www.iquilezles.org/www/articles/
